fix bottom of modal from going offscreen vertically on mobile

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -4,11 +4,13 @@
 
 .modal {
   position: fixed;
-  top: 8rem;
+  top: 50%;
   padding: 3rem 1.4rem;
+  max-height: 80vh;
   font-size: 1.4rem;
   border-radius: 0.8rem;
   border: none;
+  transform: translateY(-50%);
 
   &::backdrop {
     background-color: v.$modal-backdrop-background-color;
@@ -25,7 +27,7 @@
   }
 
   @include m.breakpoint-sm {
-    margin: 0 2.5rem 3rem;
+    margin: 0 2.5rem;
     padding: 2.5rem;
   }
 
